@@ -417,9 +417,9 @@ L<SVG::Metadata>, L<inkscape>, L<XML::Simple>
 
 =head1 AUTHOR
 
-Bryce Harrington E<lt>bryce@bryceharrington.comE<gt>
+Bryce Harrington E<lt>bryce@bryceharrington.orgE<gt>
 
-L<http://www.bryceharrington.com/|http://www.bryceharrington.com/>
+L<http://www.bryceharrington.org/|http://www.bryceharrington.org/>
 
 =head1 COPYRIGHT
 
